--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 
 main {
     text-align: justify;
-    background-color: lightgrey;
+    background-color: rgba(211, 211, 211, 0.350);
     padding: 10px;
 }
 
@@ -34,8 +34,8 @@ main > h2 {
 #perf {
     display: inline-block;
     padding: 20px;
-    background-color: white;
-    width: 500px;
+    background-color: rgba(255, 255, 255, 0.350);
+    width: 30vw;
 }
 
 #perfil {
