--- a/styles/style.css
+++ b/styles/style.css
@@ -3,12 +3,28 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
 
 html, body {
+    font-family: Arial, Helvetica, sans-serif;
     height: 80vh;
+}
+
+#apre {
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    width: 50vw;
+    background-color: rgba(255, 255, 255, 0.350);
+}
+
+div> p > img {
+    width: 128px;
+}
+
+div .teste {
+    display: inline-block;
 }
 
 body {
@@ -20,34 +36,25 @@ body {
 }
 
 main {
+    font-family: 'Courier New', Courier, monospace;
     text-align: justify;
     background-color: rgba(211, 211, 211, 0.350);
     padding: 10px;
 }
 
 main > h2 {
+    box-shadow: 0px 0px 4px 3px black;
+    background-color: rgba(82, 82, 82, 0.35);
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-#perf {
-    display: inline-block;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.350);
-    width: 30vw;
-}
-
-#perfil {
-    margin: auto;
-    width: 200px;
-    border-radius: 50%;
-}
-
-div > img {
-    width: 100%;
-    background-color: gray;
-    border-radius: 50%;
+main > p {
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.705);
+    tex
 }
 
 footer {
